--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -26,5 +26,7 @@
   </script>
 </head>
 <body>
-	<div id="header"></div>
+	<div id="header" class="hide">
+		<a href="/" id="logo"></a>
+	</div>
 	<div id="page"></div>
