--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,3 +51,36 @@ body {
   background:url('/images/bg_1.jpg') no-repeat;
   background-size: 100% auto;
 }
+
+#header {
+  width:100%;
+  height:75px;
+  background:rgba(0,0,0,.5);
+  position:absolute;
+  top:0;
+}
+
+#logo {
+  display:block;
+  height:60px;
+  width:230px;
+  background:url('/images/logo_white.png') no-repeat;
+  position:absolute;
+  top:5px;
+  left:10px;
+  opacity:.6;
+}
+
+#page {
+  position:relative;
+}
+
+#sidebar {
+  left:40%;
+  top:150px;
+  position:absolute;
+  background:rgba(0,0,0,.5);
+  margin-left:-400px;
+  width:400px;
+  height:400px;
+}
