--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -1,5 +1,25 @@
 <% include ../partials/head.ejs %>
 
-<div id="sidebar"></div>
+<div id="sidebar">
+	<h1>FEEL THE PROGRESS</h1>
+	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
+	
+	<form>
+		<div>
+			<label>Email</label>
+			<input name="email" type="text" class="text" />
+		</div>
+		<div>
+			<label>Password</label>
+			<input name="password" type="password" class="text" />
+		</div>
+		<div class="center">
+		<button type="submit">
+			<img src="/images/icon_white.png" />
+			GET STARTED
+		</button>
+		</div>
+	</form>
+</div>
 
 <% include ../partials/footer.ejs %>
