--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -36,5 +36,9 @@
 <body>
 	<div id="header" class="hide">
 		<a href="/" id="logo"></a>
+		
+		<div class="account">
+			<a href="/login" class="button"><span class="icon"></span>LOGIN</a>
+		</div>
 	</div>
 	<div id="page"></div>
