--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/head.ejs %>
 
-	<ul id="grid"></ul>
+	<ul id="grid" class="small"></ul>
 	
 <% include ../partials/footer.ejs %>
