--- a/public/stylesheets/grid.css
+++ b/public/stylesheets/grid.css
@@ -1,5 +1,5 @@
 body {
-  background:url('/images/bg_2.jpg') no-repeat center bottom;
+  background:url('/images/bg_2.jpg') no-repeat center top;
   background-size: 100% auto;
 }
 
