--- a/public/stylesheets/grid.css
+++ b/public/stylesheets/grid.css
@@ -15,6 +15,18 @@ body {
   float:left;
 }
 
+#grid.medium li {
+  width:10%;
+  height:10%;
+  float:left;
+}
+
+#grid.large li {
+  width:5%;
+  height:5%;
+  float:left;
+}
+
 #grid li div {
   width:90%;
   height:90%;
