--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -1,5 +1,7 @@
 <% include ../partials/head.ejs %>
 
-	<ul id="grid" class="large"></ul>
+	<ul id="grid" class="large">
+		<div class="percent"></div>
+	</ul>
 	
 <% include ../partials/footer.ejs %>
