--- a/public/stylesheets/grid.css
+++ b/public/stylesheets/grid.css
@@ -9,6 +9,25 @@ body {
   top:95px;
 }
 
+#grid .percent {
+  width:100%;
+  text-align:center;
+  position:absolute;
+  font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue",arial;
+  text-transform: uppercase;
+  font-size:200px;
+  left:0;
+  top:50%;
+  margin-top:-100px;
+  color:rgba(255,255,255,.25);
+  z-index:1;
+}
+
+#grid li {
+  position:relative;
+  z-index:2;
+}
+
 #grid.small li {
   width:20%;
   height:20%;
@@ -31,9 +50,9 @@ body {
   width:90%;
   height:90%;
   margin:5%;
-  background:rgba(0,0,0,.2);
+  background:rgba(0,0,0,.15);
 }
 
 #grid li.active div {
-  background:rgba(0,0,0,.85);
+  background:rgba(0,0,0,.75);
 }
