--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -15,7 +15,7 @@
 		</div>
 		<div class="center">
 		<button type="submit">
-			<img src="/images/icon_white.png" />
+			<img src="/img/icon_white.png" />
 			GET STARTED
 		</button>
 		</div>
