--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -1,5 +1,5 @@
 body {
-  background:url('/images/bg_2.jpg') no-repeat center top;
+  background:url('/img/bg_2.jpg') no-repeat center top;
   background-size: 100% auto;
 }
 
