--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<% title = 'Achieve your goals with PowerUp' %>
-  <title><%= title %></title>
+	<% if(typeof(title) === 'undefined'){ %>
+		<% title = 'Achieve your goals with PowerUp' %>
+	<% } %>
+	<title><%= title %></title>
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	<% if(typeof(stylesheets) !== 'undefined'){ %>
+		<% for(stylesheet in stylesheets){ %>
+			<link rel="stylesheet" type="text/css" href="/css/<%= stylesheets[stylesheet] %>.css" />
+		<% } %>
+	<% } %>
+	
 	
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/actions.js"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+	<% if(typeof(javascripts) !== 'undefined'){ %>
+		<% for(javascript in javascripts){ %>
+			<script type="text/javascript" src="/js/<%= javascripts[javascript] %>.js"></script>
+		<% } %>
+	<% } %>
 	
 	<!-- Google Analytics -->
 	<script type="text/javascript">
@@ -26,5 +39,11 @@
   </script>
 </head>
 <body>
-	<div id="header"></div>
-	<div id="page"></div>
+	<div id="header">
+		<a href="/" id="logo"></a>
+
+		<div class="account">
+			<a href="/login" class="button"><span class="icon"></span>LOGIN</a>
+		</div>
+	</div>
+	<div id="page">
