--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -1,11 +1,12 @@
 <% include ../partials/head.ejs %>
 
-	<ul id="grid" class="large">
-		<div class="percent"></div>
-	</ul>
+	<ul id="grid" class="large"></ul>
 	
 	<div id="content">
-	
+		<div class="heading">
+			<h1>Pushup Grid</h1>
+			<div class="progress"><span></span> complete</div>
+		</div>
 	</div>
 	
 <% include ../partials/footer.ejs %>
