--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -7,10 +7,15 @@
 			<h1>Pushup Grid</h1>
 			<div class="progress"><span></span> complete</div>
 		</div>
+		<ul class="legend">
+			<li>
+				<div class="square black"></div>
+				<div class="label">= 10 pushups</div>
+			</li>
+		</ul>
 	</div>
 	
 <% include ../partials/footer.ejs %>
-
 <script type="text/javascript">
   $(function () {
     var grid = {
