--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -7,12 +7,11 @@
 			<h1>Pushup Grid</h1>
 			<div class="progress"><span></span> complete</div>
 		</div>
-		<ul class="legend">
-			<li>
-				<div class="square black"></div>
-				<div class="label">= 10 pushups</div>
-			</li>
-		</ul>
+		<div class="legend">
+			<button class="black">10 pushups</button>
+			<button class="blue">20 pushups</button>
+			<button class="red">30 pushups</button>
+		</div>
 	</div>
 	
 <% include ../partials/footer.ejs %>
