--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -8,9 +8,18 @@
 			<div class="progress"><span></span> complete</div>
 		</div>
 		<div class="legend">
-			<button class="black">10 pushups</button>
-			<button class="blue">20 pushups</button>
-			<button class="red">30 pushups</button>
+			<button class="black">
+				<span class="plus"></span>
+				<span>10 pushups</span>
+			</button>
+			<button class="blue">
+				<span class="plus"></span>
+				<span>20 pushups</span>
+			</button>
+			<button class="red">
+				<span class="plus"></span>
+				<span>30 pushups</span>
+			</button>
 		</div>
 	</div>
 	
