--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -4,8 +4,10 @@
 	
 	<div id="content">
 		<div class="heading">
-			<h1>Pushup Grid</h1>
-			<div class="progress"><span></span> complete</div>
+			<div class="author">
+				Dane Lyons
+			</div>
+			<h1>Pushup Power Grid</h1>
 		</div>
 		<div class="legend">
 			<button class="black">
@@ -20,6 +22,13 @@
 				<span class="plus"></span>
 				<span>30 pushups</span>
 			</button>
+		</div>
+		<div class="progress"></div>
+		
+		<div class="share">
+			<a href="/"><img src="/img/twitter.png" /></a>
+			<a href="/"><img src="/img/facebook.png" /></a>
+			<a href="/"><img src="/img/google+.png" /></a>
 		</div>
 	</div>
 	
