working on a dynamic grid

--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -1,3 +1,44 @@
-<div class="grid">
-  
-</div>
+<% include ../partials/head.ejs %>
+
+	<ul id="grid" class="large"></ul>
+	
+	<div id="content">
+		<div class="heading">
+			<div class="author">
+				<%= grid.user.name %>
+			</div>
+			<h1><%= grid.name %></h1>
+		</div>
+		<div class="legend">
+		  <% var colors = ['black', 'blue', 'red']; %>
+		  <% for (var i = 0; i < powerUps.length; i++) { %>
+  			<button class="<%= colors[i] %>">
+  				<span class="plus"></span>
+  				<span><%= powerUps %> <%= grid.workUnit.split(' ')[-1] %></span>
+  			</button>
+  		<% } %>
+		</div>
+		<div class="progress"></div>
+		
+		<div class="share">
+			<a href="/"><img src="/img/twitter.png" /></a>
+			<a href="/"><img src="/img/facebook.png" /></a>
+			<a href="/"><img src="/img/google+.png" /></a>
+		</div>
+	</div>
+	
+<% include ../partials/footer.ejs %>
+<script type="text/javascript">
+  $(function () {
+    var grid = {
+      size: 400,
+      powerUps: []
+    };
+    
+    for (var i = 0; i < 100; i++) {
+      grid.powerUps.push(Math.floor(Math.random() * grid.size));
+    }
+    PowerUp.GridMaster.initializeGrid();
+    PowerUp.GridMaster.populateGrid(grid);
+  });
+</script>
