--- a/views/auth/sign_up.ejs
+++ b/views/auth/sign_up.ejs
@@ -9,5 +9,7 @@
       <input type="password" class="password" name="user[password]"
         placeholder="password" />
     </div>
+    
+    <input type="submit" value="Sign up" />
   </form>
 </div>
