--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -71,6 +71,10 @@ body {
   margin:0;
 }
 
+#content .legend button.powerup {
+  cursor: pointer;
+}
+
 #content .legend button span {
   display:inline-block;
 }
