--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -4,14 +4,14 @@
 	<h1>FEEL THE PROGRESS</h1>
 	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
 	
-	<form>
+	<form action="/sign_up" method="post">
 		<div>
 			<label>Email</label>
-			<input name="email" type="text" class="text" />
+			<input name="user[email]" type="text" class="text" />
 		</div>
 		<div>
 			<label>Password</label>
-			<input name="password" type="password" class="text" />
+			<input name="user[password]" type="password" class="text" />
 		</div>
 		<div class="center">
 		<button type="submit">
