--- a/views/page/grid.ejs
+++ b/views/page/grid.ejs
@@ -46,5 +46,6 @@
     }
     PowerUp.GridMaster.initializeGrid();
     PowerUp.GridMaster.populateGrid(grid);
+		PowerUp.GridMaster.gridKeeper();
   });
 </script>
