--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,11 @@
 	</div>
+	
+	<div id="nav">
+		<a href="/">Getting Started</a>
+		<a href="/">FAQ</a>
+		<a href="/">Press</a>
+		<a href="/">Blog</a>
+		<a href="/">Contact</a>
+	</div>
 </body>
 </html>
