--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,3 +154,28 @@ form label {
   position:relative;
   top:2px;
 }
+
+#nav {
+  width:100%;
+  position:fixed;
+  bottom:0;
+  left:0;
+  height:40px;
+  background:rgba(0,0,0,.6);
+}
+
+#nav a {
+  color:rgba(255,255,255,.5);
+  display:block;
+  width:20%;
+  height:40px;
+  line-height:40px;
+  text-align:center;
+  text-decoration:none;
+  float:left;
+}
+
+#nav a:hover {
+  color:#fff;
+  background:rgba(111,11,11,.75);
+}
