getting started on getting started

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 	</div>
 	
 	<div id="nav">
-		<a href="/">Getting Started</a>
+		<a href="/getting-started">Getting Started</a>
 		<a href="/">FAQ</a>
 		<a href="/">Press</a>
 		<a href="/">Blog</a>
