--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -206,9 +206,9 @@ body {
   width:100%;
   position:absolute;
   top:50%;
+  letter-spacing:1px;
   left:0;
   line-height:0;
-  font-size:50px;
 }
 
 #milestone h2 {
