--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,15 @@ body {
   overflow:hidden;
 }
 
+a {
+  color:#ae0000;
+  text-decoration:none;
+}
+
+a:hover {
+  text-decoration:underline;
+}
+
 .center {
   text-align:center;
 }
