--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -5,55 +5,49 @@
 
 <ul class="toc">
 	<li>
-		<button class="active" data-slide="help">
-			<div class="icon"></div>
-			We're here to help
+		<button class="active the_grid" data-slide="the_grid">
+			<div class="icon">1</div>
+			The Grid
 		</button>
 	</li>
 	<li>
-		<button data-slide="starting_grid">
-			<div class="icon"></div>
-			Starting a grid
+		<button class="help" data-slide="help">
+			<div class="icon">2</div>
+			Getting Help
 		</button>
 	</li>
 	<li>
-		<button data-slide="using_grid">
-			<div class="icon"></div>
-			Using your grid
+		<button class="ideas" data-slide="ideas">
+			<div class="icon">3</div>
+			Grid Ideas
 		</button>
 	</li>
 	<li>
-		<button data-slide="maximizing_grid">
-			<div class="icon"></div>
-			Getting the most out of your grid
-		</button>
-	</li>
-	<li>
-		<button data-slide="support">
-			<div class="icon"></div>
-			Getting support from your friends
+		<button class="support" data-slide="support">
+			<div class="icon">4</div>
+			Friends
 		</button>
 	</li>
 </ul>
 
 <div class="content">
 	<div class="slides">
-		<div class="slide help active">
+		<div class="slide the_grid active">
+			[Video Intro]
+			<a class="next" href="#" data-slide="help">Next: Getting Help &rarr;</a>
+		</div>
+		<div class="slide help">
 			<p>No matter if you're here to track your workouts or finish a project that has been sitting on the back burner for the last year, we want to help you reach your goals.</p>
 			<p>Get <a target="_blank" href="mailto:help@powerup.io">help@powerup.io</a> whenever you have any problems, questions, comments or ideas. We're a small team but we'll get back to you as soon as we can.</p>
-			<a class="next">Next: Starting a grid &rarr;</a>
+			<a class="next" href="#" data-slide="ideas">Next: Grid Ideas &rarr;</a>
 		</div>
-		<div class="slide starting_grid">
-			[SCREENCAST GOES HERE]
-		</div>
-		<div class="slide using_grid">
-			[SCREENCAST GOES HERE]
-		</div>
-		<div class="slide maximizing_grid">
-			[SCREENCAST GOES HERE]
+		<div class="slide ideas">
+			[grid ideas]
+			<a class="next" href="#" data-slide="support">Next: Friends &rarr;</a>
 		</div>
 		<div class="slide support">
-			[CONTENT GOES HERE]
+			Friend support
+			<a href="/grids/new">Create a grid &rarr;</a>
 		</div>
 </div>
 
