--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head.ejs %>
 <link href="/css/grid.css" rel="stylesheet" type="text/css" />
 
-<ul id="grid" class="large"></ul>
+<ul id="grid" class="large" data-grid-id="<%- grid._id %>"></ul>
 
 <div id="content">
 	<div class="heading">
