--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,8 +15,10 @@
 	<% } %>
 	
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/js/jquery.easing.js"></script>
 	<script type="text/javascript" src="/js/actions.js"></script>
+	
 	<% if(typeof(javascripts) !== 'undefined'){ %>
 		<% for(javascript in javascripts){ %>
 			<script type="text/javascript" src="/js/<%= javascripts[javascript] %>.js"></script>
