getting started changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
 		<a href="/">FAQ</a>
 		<a href="/">Press</a>
 		<a href="/">Blog</a>
-		<a href="/">Contact</a>
+		<a href="/contact">Contact</a>
 	</div>
 </body>
 </html>
