--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,18 @@ a:hover {
   text-decoration:underline;
 }
 
+img.right {
+  float:right;
+  margin-left:15px;
+  margin-bottom:15px;
+}
+
+img.left {
+  float:left;
+  margin-right:15px;
+  margin-bottom:15px;
+}
+
 .center {
   text-align:center;
 }
