--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -11,21 +11,15 @@
 		</button>
 	</li>
 	<li>
-		<button class="help" data-slide="help">
-			<div class="icon">2</div>
-			Getting Help
-		</button>
-	</li>
-	<li>
 		<button class="ideas" data-slide="ideas">
-			<div class="icon">3</div>
+			<div class="icon">2</div>
 			Grid Ideas
 		</button>
 	</li>
 	<li>
-		<button class="support" data-slide="support">
-			<div class="icon">4</div>
-			Friends
+		<button class="support" data-slide="setup">
+			<div class="icon">3</div>
+			Build a Grid
 		</button>
 	</li>
 </ul>
@@ -33,21 +27,18 @@
 <div class="content">
 	<div class="slides">
 		<div class="slide the_grid active">
-			[Video Intro]
-			<a class="next" href="#" data-slide="help">Next: Getting Help &rarr;</a>
-		</div>
-		<div class="slide help">
-			<p>No matter if you're here to track your workouts or finish a project that has been sitting on the back burner for the last year, we want to help you reach your goals.</p>
-			<p>Get <a target="_blank" href="mailto:help@powerup.io">help@powerup.io</a> whenever you have any problems, questions, comments or ideas. We're a small team but we'll get back to you as soon as we can.</p>
+			<img class="left" src="/img/demo_grid.jpg" />
+			<img class="left" src="/img/demo_percent.jpg" />
+			<p class="clear">PowerUp Grids help you track progress. Start by picking a goal and splitting it into manageable tasks. For example, I created a grid to help me complete 4,000 push-ups. Every time I do 10 push-ups I earn a square.</p>
 			<a class="next" href="#" data-slide="ideas">Next: Grid Ideas &rarr;</a>
 		</div>
 		<div class="slide ideas">
-			[grid ideas]
-			<a class="next" href="#" data-slide="support">Next: Friends &rarr;</a>
+			<p>[grid ideas]</p>
+			<a class="next" href="#" data-slide="setup">Next: Friends &rarr;</a>
 		</div>
-		<div class="slide support">
-			Friend support
-			<a href="/grids/new">Create a grid &rarr;</a>
+		<div class="slide setup">
+			<p>Grid setup form</p>
+			<a class="next" href="#" data-slide="setup">Next: Getting Help &rarr;</a>
 		</div>
 </div>
 
