--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -27,8 +27,8 @@
 <div class="content">
 	<div class="slides">
 		<div class="slide the_grid active">
-			<img class="left" src="/img/demo_grid.jpg" />
-			<img class="left" src="/img/demo_percent.jpg" />
+			<img src="/img/demo_screen.jpg" style="float:left;" />
+			<img src="/img/shadow.png" />
 			<p class="clear">PowerUp Grids help you track progress. Start by picking a goal and splitting it into manageable tasks. For example, I created a grid to help me complete 4,000 push-ups. Every time I do 10 push-ups I earn a square.</p>
 			<a class="next" href="#" data-slide="ideas">Next: Grid Ideas &rarr;</a>
 		</div>
