--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -1,5 +1,6 @@
 body {
   background:url('/img/bg_3.jpg') no-repeat center top;
+  background:url('/img/maui.jpg') no-repeat center top;
   background-size: 100% auto;
   background-size: cover;
 }
