--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -56,7 +56,9 @@
 			</li>
 		</ul>
 		<ul class="slide setup">
-			<li>GRID SETUP FORM</li>
+			<li>
+			  <% include ../partials/grid_mini_form.ejs %>
+			</li>
 		</ul>
 </div>
 
