--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -1,7 +1,12 @@
 <% include ../partials/head.ejs %>
 
-<a class="skip" href="/grids/new">I'M READY TO GO!<br /><span>CREATE A GRID &rarr;</span></a>
-<h1>GETTING STARTED WITH POWERUP</h1>
+<div class="share">
+	<a href="/"><img src="/img/twitter.png"></a>
+	<a href="/"><img src="/img/facebook.png"></a>
+	<a href="/"><img src="/img/google+.png"></a>
+</div>
+
+<h1>START POWERING UP</h1>
 
 <ul class="toc">
 	<li>
@@ -29,30 +34,30 @@
 		<ul class="slide the_basics active">
 			<li>
 				<img src="/img/trophy.png" class="left" />
-				It all starts with a <strong>simple goal</strong>. Maybe you want to learn a new language, lose 50lbs, finish a project, eat healthier or any other worth while ambition.
+				It all starts with a <strong>simple goal</strong>. Maybe you want to learn a new language, lose 50lbs or finish that project that has been sitting on the back burner for too long.
 			</li>
 			<li>
 				<img src="/img/icon_grid.png" class="left" />
-				We help you break down your goals into manageable tasks. Every time you complete a task you get rewarded with a square in your personal PowerUp Grid.
+				We help you break down your goals into manageable bits. Every time you complete a task, you get rewarded with a square in your personal PowerUp Grid.
 			</li>
 			<li>
 				<img src="/img/icon_powerup.png" class="left" />
 				Complete an entire grid and earn a PowerUp Badge. Your badge timeline is a great way to keep track of all your accomplishments.
 			</li>
-			<li>
-				<a class="next" href="#" data-slide="friends">Next: Friends &rarr;</a>
+			<li class="next_btn">
+				<a class="next" href="#" data-slide="friends">Next: Friends</a>
 			</li>
 		</ul>
 		<ul class="slide friends">
 			<li>
 				<img src="/img/icon_friends.png" class="left" />
-				Sometimes you need a little extra push to keep on track. We've made it so you can collaborate on grids with your friends either cooperatively or competitively!
+				Sometimes you need a little extra push to keep on track. With PowerUp you can collaborate on grids with your friends either cooperatively or competitively!
 			</li>
 			<li>
 				Or share your grid on social media so your friends can cheer you on from the sidelines.
 			</li>
-			<li style="padding-top:10px">
-				<a class="next" href="#" data-slide="setup">Next: Build a Grid &rarr;</a>
+			<li class="next_btn">
+				<a class="next" href="#" data-slide="setup">Next: Build a Grid</a>
 			</li>
 		</ul>
 		<ul class="slide setup">
