--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -4,6 +4,7 @@
 	<h1>FEEL THE PROGRESS</h1>
 	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
 	
+	<a href="/getting-started">GET STARTED</a>
 	<form action="/sign_up" method="post">
 		<div>
 			<label>Email</label>
