--- a/public/css/start.css
+++ b/public/css/start.css
@@ -17,3 +17,32 @@
   text-align:left;
   padding-top:20px;
 }
+
+.content .slides {
+  position:relative;
+  overflow:hidden;
+  width:100%;
+  height:800px;
+}
+
+.content .slides .slide {
+  width:100%;
+  position:absolute;
+  top:0;
+  left:100%;
+  -webkit-transition:left 200ms linear;
+  -moz-transition:left 200ms linear;
+  transition:left 200ms linear;
+}
+
+.content .slides .seen {
+  left:-100%;
+}
+
+.content .slides .active {
+  left:0;
+}
+
+.content .slides .slide li {
+  clear:left;
+}
